--- a/components/ListMenu/listMenu.module.css
+++ b/components/ListMenu/listMenu.module.css
@@ -1,6 +1,6 @@
 .list-menu-container {
   width: 100%;
-  padding: 0;
+  padding: 12px 0 0;
   margin: 0;
   font-size: 1.2em;
   font-weight: 700;
