--- a/components/MenuDrawer/menuDrawer.module.css
+++ b/components/MenuDrawer/menuDrawer.module.css
@@ -16,7 +16,7 @@
 
 @media only screen and (min-width: 600px) {
   .menu-drawer > div {
-    min-width: calc(100% / 3);
+    min-width: calc(100% / 4);
   }
 }
 
